Change page header name to Template Generator
Current page header name of template generator panel is "Generate
Template", it is better to be same as the panel name "Template
Generator".

Change-Id: I7352b16bf93e1026bfe296503336ad7ac5de1a3b

--- a/heat_dashboard/locale/ja/LC_MESSAGES/django.po
+++ b/heat_dashboard/locale/ja/LC_MESSAGES/django.po
@@ -15,5 +15,5 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0\n"
 "X-Generator: Zanata 3.7.3\n"
 
-msgid "Generate Template"
+msgid "Template Generator"
 msgstr "テンプレートの生成"
